--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next build",
+    "dev": "node scripts/generate-manifest.js && next dev",
+    "build": "node scripts/generate-manifest.js && next build",
+    "export": "node scripts/generate-manifest.js && next build",
     "lint": "next lint"
   },
   "dependencies": {
