--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,15 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Copy CNAME file
+        run: |
+          if [ -f CNAME ]; then
+            cp CNAME out/CNAME
+            echo "✅ CNAME file copied to out directory"
+          else
+            echo "⚠️ CNAME file not found"
+          fi
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
